release 1.12

release 1.11 (12-2011)
- Fixed issue 875
  http://java.net/jira/browse/JERSEY-875
  Fixed broken jersey-quickstart-ejb archetype, removed jaxb dependency from pom, it's not required.
- Fixed issue 838
  http://java.net/jira/browse/JERSEY-838
  Fixed broken jersey-quickstart-grizzly2 archetype, added missing dependency to pom and corrected package import.
- Fixed issue 849
  http://java.net/jira/browse/JERSEY-849
  "Registering with Twitter" section updated to match current Twitter UI in samples/oauth-client-twitter/README.html
- Fixed issue 844
  http://java.net/jira/browse/JERSEY-844
  Links pointing to "hypermedia-action-sample" broken in user guide
- Fixed issue 835
  http://java.net/jira/browse/JERSEY-835
  JsonLexer used to throw java.lang.Error in case of syntactical errors with the JSON stream. Fixed to throw JsonFormatException which gets subsequently wrapped (by the message processing chain) an a WebApplicationException with the status code 400.
- Fixed issue 627
  http://java.net/jira/browse/JERSEY-627
  Parameters of media type are not quoted correctly if containing separators.
- Fixed issue 833
  http://java.net/jira/browse/JERSEY-833
  Normalization of the request parameters now correctly orders request parameters.
- Jackson dependency upgrade: 1.8.3 -> 1.9.0
- Added EclipseLink MOXy support (http://wiki.eclipse.org/EclipseLink/Examples/MOXy)
  The main added value is the external JAXB binding feature, 
  see moxy-oxm-mapping example for details 
- Workarounded issue 802
  http://java.net/jira/browse/JERSEY-802
  Client filters are not executed when using NonBlockingClient and making
  async web requests. Introduced a way how to set Ning request/response filters,
  Jersey client filters can't be used.

release 1.10 (11-2011)
- Fixed issue 791
  http://java.net/jira/browse/JERSEY-796
  jersey-archive was incorrectly updated when jersey-servlet module was introduced
- Fixed issue 796
  http://java.net/jira/browse/JERSEY-796