@@ -55,7 +55,7 @@
         <dependency>
             <groupId>com.sun.grizzly</groupId>
             <artifactId>grizzly-servlet-webserver</artifactId>
-            <version>1.9.35</version>
+            <version>1.9.42</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
